objects/ASI_TH_CRM_Offtake_Stock_In_Trade__c.object
<CustomObject>
    <description>ASI_TH_CRM_Stock_In_Trade</description>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MY_WS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Wholesaler</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>Offtake/Stock-In-Trade</relationshipLabel>
        <relationshipName>Offtake_Stock_In_Trade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_Account_Record_Type__c</fullName>
        <formula>ASI_TH_CRM_Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TH_Account_Region__c</fullName>
        <formula>TEXT(ASI_TH_CRM_Account__r.ASI_TH_CRM_Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Offtake/Stock-In-Trade</relationshipLabel>
        <relationshipName>Offtake_Stock_in_Trade</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Month__c</fullName>
        <label>Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Sept</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_OfftakeSIT_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Offtake/Stock-In-Trade External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Editable</fullName>
                </value>
                <value>
                    <fullName>Locked</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_TH_CRM_Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Offtake/Stock-In-Trade</label>
    <listViews>
        <fullName>ASI_CRM_MO_Final</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_TH_CRM_Account__c</field>
            <operation>contains</operation>
            <value>Seapower</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Final</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade__c.ASI_CRM_MO_WS_Offtake</value>
        </filters>
        <label>ASI CRM MO - Final</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MO_Power_Users</group>
            <group>ASI_CRM_MO_Standard_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MO_Open</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_TH_CRM_Account__c</field>
            <operation>contains</operation>
            <value>Seapower</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade__c.ASI_CRM_MO_WS_Offtake</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>ASI CRM MO - Open</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MO_Power_Users</group>
            <group>ASI_CRM_MO_Standard_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_CRM_MO_Seapower</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_TH_CRM_Account__c</field>
            <operation>contains</operation>
            <value>Seapower</value>
        </filters>
        <label>ASI CRM MO - Seapower</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_CRM_MO_Portal_Users</group>
            <group>ASI_CRM_MO_Power_Users</group>
            <group>ASI_CRM_MO_Standard_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_MY_CRM_All_Offtake_Stock_in_Trade</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_CRM_MY_WS__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade__c.ASI_CRM_MY_Offtake_Stock_In_Trade</value>
        </filters>
        <label>All Offtake/Stock-in-Trade - MY</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Access_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_All_Offtake_Stock_in_Trade</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_TH_CRM_Month__c</field>
            <operation>equals</operation>
            <value>Oct</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2016</value>
        </filters>
        <label>All Offtake/Stock-in-Trade -1016</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Access_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_Editable_Offtake_SIT</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade__c.ASI_TH_CRM_SIT_Editable</value>
        </filters>
        <label>All Editable Offtake/SIT</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Access_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ASI_TH_CRM_Locked_Offtake_SIT</fullName>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade__c.ASI_TH_CRM_SIT_Locked</value>
        </filters>
        <label>All Locked Offtake/SIT</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Access_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Offtake_Stock_in_Trade_Regional_IT</fullName>
        <columns>ASI_TH_CRM_OfftakeSIT_External_ID__c</columns>
        <columns>NAME</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_TH_CRM_Account__c</field>
            <operation>contains</operation>
            <value>110033</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Year__c</field>
            <operation>greaterOrEqual</operation>
            <value>2015</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade__c.ASI_TH_CRM_SIT_Locked</value>
        </filters>
        <label>All Offtake/Stock-in-Trade - Regional IT</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Access_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MT_Editable_Offtake_SIT</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_TH_Account_Region__c</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade__c.ASI_TH_CRM_SIT_Editable</value>
        </filters>
        <filters>
            <field>ASI_CRM_TH_Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Modern Trade (TH)</value>
        </filters>
        <label>MT Editable Offtake/SIT</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Access_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WS_Editable_Offtake_SIT</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_TH_Account_Region__c</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade__c.ASI_TH_CRM_SIT_Editable</value>
        </filters>
        <filters>
            <field>ASI_CRM_TH_Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Wholesaler (TH)</value>
        </filters>
        <label>WS Editable Offtake/SIT</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Access_All</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>WS_Editable_Offtake_SIT_201507</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_TH_Account_Region__c</columns>
        <columns>ASI_TH_CRM_Account__c</columns>
        <columns>ASI_TH_CRM_Year__c</columns>
        <columns>ASI_TH_CRM_Month__c</columns>
        <columns>ASI_TH_CRM_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_TH_CRM_Offtake_Stock_In_Trade__c.ASI_TH_CRM_SIT_Editable,ASI_TH_CRM_Offtake_Stock_In_Trade__c.ASI_TH_CRM_SIT_Locked</value>
        </filters>
        <filters>
            <field>ASI_CRM_TH_Account_Record_Type__c</field>
            <operation>equals</operation>
            <value>Wholesaler (TH)</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Month__c</field>
            <operation>equals</operation>
            <value>Jul</value>
        </filters>
        <filters>
            <field>ASI_TH_CRM_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </filters>
        <label>WS Editable Offtake/SIT (201507)</label>
        <language>en_US</language>
        <sharedTo>
            <group>ASI_TH_CRM_Access_All</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SIT-{00000}-TH</displayFormat>
        <label>SIT No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Offtake/Stock-In-Trade</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MO_WS_Offtake</fullName>
        <active>true</active>
        <label>ASI CRM MO WS Offtake</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MY_Offtake_Stock_In_Trade</fullName>
        <active>true</active>
        <label>ASI CRM MY Offtake Stock In Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_Offtake_Stock_In_Trade</fullName>
        <active>true</active>
        <label>ASI CRM SG Offtake Stock In Trade</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_SIT_Editable</fullName>
        <active>true</active>
        <label>Editable</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_TH_CRM_SIT_Locked</fullName>
        <active>true</active>
        <label>Locked</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_MO_OT_Status</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
CONTAINS(RecordType.DeveloperName, &apos;ASI_CRM_MO&apos;),
TEXT(ASI_TH_CRM_Status__c) != &apos;Final&apos;,
ISCHANGED(ASI_TH_CRM_Status__c),
OR(CONTAINS($User.LastName, &apos;Seapower&apos;),
CONTAINS($User.FirstName, &apos;Seapower&apos;))
)</errorConditionFormula>
        <errorMessage>Cannot change status from Final to Draft</errorMessage>
    </validationRules>
</CustomObject>